--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 
     "devDependencies": {
         "grunt": ">=0.4.0",
-        "grunt-contrib-handlebars": ">=0.5.8"
+        "grunt-contrib-handlebars": ">=0.5.8",
+        "requirejs": ">=2.1.8"
     },
 
     "engines": {
