--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dependencies": {
         "mariasql": ">= 0.1.19",
         "underscore": ">= 1.5.1",
-        "express": ">= 3.4.4"
+        "express": ">= 3.4.4",
+        "socket.io": ">= 0.9.16"
     },
 
     "devDependencies": {
